[package]
name = "accelerate"
version = "0.2.0"
authors = ["Manuel Reinhardt <M.Reinhardt@amolf.nl>"]
edition = "2018"

[lib]
name = "accelerate"

[dependencies]
rand = "0.7.3"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = {version = "0.13", features = ["rayon"]}
rayon = "1.3"
rand_pcg = "0.2.1"
arrayvec = "0.5"
jemallocator = "0.3.0"
chrono = "0.4.10"
ryu = "1"
ctrlc = { version = "3.0", features = ["termination"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_debug"] }
env_logger = "0.7.1"
tera = { version = "1", default-features = false }
ndarray-stats = "0.3.0"
noisy_float = "0.1.11"
netcdf = "0.4"
jemalloc-ctl = "0.3.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
debug = true

[build-dependencies]
vergen = "3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "simulate"
harness = false